Added user location and about me to events page / compose box widget.

--- a/motion/static/theme/home.html
+++ b/motion/static/theme/home.html
@@ -104,7 +104,7 @@
                                     </div><!-- end #compose-userpic -->
                                     <div id="user-meta" class="pkg">
                                         <div id="user-username">Jim Ramsey</div>
-                                        <div id="user-counts">
+                                        <div id="user-data">
                                             10 posts
                                             <span class="separator">|</span>
                                             39 comments
